infra/k8s/event-bus-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-delp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus  # service will match this string
    spec:
      containers:
        - name: event-bus
          image: utkarsh7sharma/event-bus 
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-clusterip-srv
spec:
  selector:
    app: event-bus # to select the POD based on this "app" property
  type: ClusterIP
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
