infra/k8s/moderation-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-delp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation  # service will match this string
    spec:
      containers:
        - name: moderation
          image: utkarsh7sharma/moderation 
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-clusterip-srv
spec:
  selector:
    app: moderation # to select the POD based on this "app" property
  type: ClusterIP
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-nodeport-srv
spec:
  selector:
    app: moderation
  type: NodePort
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
