infra/k8s/posts-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1 # number of pods 
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts # service will match this string
    spec:
      containers:
        - name: posts
          image: utkarsh7sharma/posts # get the latest image from docker
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  selector:
    app: posts # to select the POD based on this "app" property
  type: ClusterIP
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  selector: #  which set of Pods the service should route traffic to
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
